checkout/cybersourcePayments/cybersourcePayments/objects/Country_Code__mdt/Country_Code__mdt.object-meta.xml
<CustomObject>
    <label>Country Code</label>
    <pluralLabel>Country Codes</pluralLabel>
</CustomObject>