checkout/cybersourcePayments/cybersourcePayments/objects/Country_Code__mdt/fields/Alpha2Code__c.field-meta.xml
<CustomField>
    <fullName>Alpha2Code__c</fullName>
    <label>Alpha2Code</label>
    <length>2</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>