checkout/cybersourcePayments/cybersourcePayments/objects/Country_Code__mdt/fields/Alpha3Code__c.field-meta.xml
<CustomField>
    <fullName>Alpha3Code__c</fullName>
    <label>Alpha3Code</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>