checkout/cybersourcePayments/cybersourcePayments/objects/Country_Code__mdt/listViews/All_Country_Codes.listView-meta.xml
<ListView>
    <fullName>All_Country_Codes</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Country_Name__c</columns>
    <columns>Alpha2Code__c</columns>
    <columns>Alpha3Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Country Codes</label>
</ListView>